--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               type="range"
               id="spread"
               name="spread"
-              min="-100"
+              min="0"
               max="100"
               value="3"
             />
@@ -78,6 +78,15 @@
           <div class="reference-input">
             <input type="text" id="spread-value" name="spread-value" />
             <p>px</p>
+          </div>
+        </div>
+        <div class="form-control">
+          <div class="range-input">
+            <label for="color">Cor da Sombra:</label>
+            <input type="color" id="color" name="color" value="#000000" />
+          </div>
+          <div class="reference-input">
+            <input type="text" id="color-value" name="color-value" />
           </div>
         </div>
       </div>
